--- a/mongodb/README.adoc
+++ b/mongodb/README.adoc
@@ -532,6 +532,29 @@ xime@cursada> db.alumnes.find({ materiaCursada: { $exists: false }, $and: [{ dni
 
 == Array
 
+Se puede ver que MongoDB permite los atributos multivaluados mediante arrays o documentos embebidos.
+
+Existen distintos operadores que permiten realizar la búsqueda de información dentro de un array de forma más dinámica.
+
+Si quisiéramos obtener las materias que da el docente 'Bertaccini, Daniel', deberíamos obtener las materias que contienen a este docente en su array de docentes. Para esto, utilizamos el operador `$elemMatch`. Este operador devuelve los documentos que contienen el valor especificado dentro del array provisto.
+
+[source, console]
+----
+xime@cursada> db.materias.find({ docentes: { $elemMatch: { $eq: 'Bertaccini, Daniel' }}}, { nombre: 1, docentes: 1 })
+[
+  {
+    _id: 5,
+    nombre: 'Bases de Datos I',
+    docentes: [ 'Bertaccini, Daniel', 'Ebertz, Ximena', 'Rondelli, Hernán' ]
+  },
+  {
+    _id: 4,
+    nombre: 'Programación III',
+    docentes: [ 'Bertaccini, Daniel' ]
+  }
+]
+----
+
 == Update
 
 updateOne
