--- a/mongodb/README.adoc
+++ b/mongodb/README.adoc
@@ -536,7 +536,7 @@ Se puede ver que MongoDB permite los atributos multivaluados mediante arrays o d
 
 Existen distintos operadores que permiten realizar la búsqueda de información dentro de un array de forma más dinámica.
 
-Si quisiéramos obtener las materias que da el docente 'Bertaccini, Daniel', deberíamos obtener las materias que contienen a este docente en su array de docentes. Para esto, utilizamos el operador `$elemMatch`. Este operador devuelve los documentos que contienen el valor especificado dentro del array provisto.
+Si quisiéramos obtener las materias que da el docente 'Bertaccini, Daniel', deberíamos obtener las materias que contienen a este docente en su array de docentes. Para esto, utilizamos el operador `$elemMatch`. Este operador devuelve los documentos que contienen el valor especificado dentro del array correspondiente.
 
 [source, console]
 ----
@@ -551,6 +551,20 @@ xime@cursada> db.materias.find({ docentes: { $elemMatch: { $eq: 'Bertaccini, Dan
     _id: 4,
     nombre: 'Programación III',
     docentes: [ 'Bertaccini, Daniel' ]
+  }
+]
+----
+
+Si, por otra parte, quisiéramos saber las materias que son dadas únicamente por 'Bertaccini, Daniel' y 'Rondelli, Hernán', utilizamos el operador `$all`. Mediante este operador, buscamos los documentos que contienen todos los valores especificados, dentro del array correspondiente.
+
+[source, console]
+----
+xime@cursada> db.materias.find({ docentes: { $all: ['Bertaccini, Daniel', 'Rondelli, Hernán']}}, { nombre: 1, docentes: 1 })
+[
+  {
+    _id: 5,
+    nombre: 'Bases de Datos I',
+    docentes: [ 'Bertaccini, Daniel', 'Ebertz, Ximena', 'Rondelli, Hernán' ]
   }
 ]
 ----
