--- a/mongodb/README.adoc
+++ b/mongodb/README.adoc
@@ -584,10 +584,70 @@ xime@cursada> db.materias.find({ docentes: { $size: 0}}, { nombre: 1, docentes: 
 
 == Update
 
-updateOne
-updateMany
+Para actualizar documentos, tenemos dos opciones: `updateOne` y `updateMany`, estableciendo el filtro en el primer parámetro de la función, y el valor o los valores a actualizar con el operador `$set` en el segundo parámetro. 
 
-$set y $unset
+Por ejemplo, si quisiéramos actualizar el año de la primer materia a 2025, haríamos lo siguiente:
+
+[source, console]
+----
+xime@cursada> db.materias.updateOne({}, { $set: { anio: 2025 }})
+----
+
+Esta consulta modifica la colección de la siguiente manera:
+
+[source, console]
+----
+xime@cursada> db.materias.find({}, { _id: 0, nombre: 1, anio: 1 })
+[
+  { nombre: 'Introducción a la Programación', anio: 2025 },
+  { nombre: 'Física Cuántica', anio: 2024 },
+  { nombre: 'Bases de Datos I', anio: 2024 },
+  { nombre: 'Bases de Datos II', anio: 2024 },
+  { nombre: 'Programación III', anio: 2024 }
+]
+----
+
+Si quisiéramos modificar el año de todas las materias, realizaríamos la misma consulta pero utilizando la función `updateMany`.
+
+[source, console]
+----
+xime@cursada> db.materias.updateMany({}, { $set: { anio: 2025 }})
+----
+
+Y se obtiene el siguiente resultado:
+
+[source, console]
+----
+xime@cursada> db.materias.find({}, { _id: 0, nombre: 1, anio: 1 })
+[
+  { nombre: 'Introducción a la Programación', anio: 2025 },
+  { nombre: 'Física Cuántica', anio: 2025 },
+  { nombre: 'Bases de Datos I', anio: 2025 },
+  { nombre: 'Bases de Datos II', anio: 2025 },
+  { nombre: 'Programación III', anio: 2025 }
+]
+----
+
+Por otra parte, el operador `$unset` permite eliminar un campo para todos los documentos cuyo valor sea el establecido. Por ejemplo, si quisiéramos eliminar el año de las materias cuyo valor de este campo está establecido en 2025, lo podemos realizar de la siguiente forma:
+
+[source, console]
+----
+xime@cursada> db.materias.updateMany({}, { $unset: { anio: 2025 }})
+----
+
+En este caso, se eliminarían los años de todas las materias.
+
+[source, console]
+----
+xime@cursada> db.materias.find({}, { _id: 0, nombre: 1, anio: 1 })
+[
+  { nombre: 'Introducción a la Programación' },
+  { nombre: 'Física Cuántica' },
+  { nombre: 'Bases de Datos I' },
+  { nombre: 'Bases de Datos II' },
+  { nombre: 'Programación III' }
+]
+----
 
 == Eliminar datos
 
