--- a/mongodb/README.adoc
+++ b/mongodb/README.adoc
@@ -582,6 +582,8 @@ xime@cursada> db.materias.find({ docentes: { $size: 0}}, { nombre: 1, docentes: 
 // Ver por qué no anda
 // Es importante considerar que los arrays tienen orden, lo que nos permite acceder a elementos por posición. Esto se realiza utilizando la estructura `'nombreArray.posicion'`, y se puede utilizar ya sea para selección o proyección. Si en lugar de una posición numérica utilizamos el símbolo `$`, MongoDB devolverá  el primer elemento del array, según la condición de selección sobre el mismo array.
 
+// Añadir operadores de modificación de array
+
 == Update
 
 Para actualizar documentos, tenemos dos opciones: `updateOne` y `updateMany`, estableciendo el filtro en el primer parámetro de la función, y el valor o los valores a actualizar con el operador `$set` en el segundo parámetro. 
