--- a/README.adoc
+++ b/README.adoc
@@ -2,4 +2,4 @@
 
 © 2018 Rondelli +
 © 2019-2022 Rondelli, Czemerinski +
-© 2023 Rondelli, Bertaccini, Ebertz
+© 2023-2024 Rondelli, Bertaccini, Ebertz
