--- a/mongodb/README.adoc
+++ b/mongodb/README.adoc
@@ -692,6 +692,79 @@ xime@cursada> db.alumnes.find({ _id: 7 }, { dni: 0, 'materiaCursada.id': 0 })
 ]
 ----
 
+Supongamos que se añadió por error un nuevo docente a todas las materias, llamado 'Fury, Nick'... _(ejercicio: ¿cómo se haría esto?)_
+
+[source, console]
+----
+xime@cursada> db.materias.find({}, { _id: -1, nombre: 1, docentes: 1 })
+[
+  {
+    _id: 5,
+    nombre: 'Bases de Datos I',
+    docentes: [
+      'Bertaccini, Daniel',
+      'Ebertz, Ximena',
+      'Rondelli, Hernán',
+      'Fury, Nick'
+    ]
+  },
+  { _id: 6, nombre: 'Bases de Datos II', docentes: [ 'Fury, Nick' ] },
+  {
+    _id: 4,
+    nombre: 'Programación III',
+    docentes: [ 'Bertaccini, Daniel', 'Fury, Nick' ]
+  },
+  {
+    _id: 1,
+    nombre: 'Introducción a la Programación',
+    docentes: [ 'Ebertz, Ximena', 'Fury, Nick' ]
+  },
+  {
+    _id: 21,
+    nombre: 'Física Cuántica',
+    docentes: [ 'Rondelli, Hernán', 'Fury, Nick' ]
+  }
+]
+----
+
+¿Cómo se podría eliminar de manera sencilla?
+
+Como es un solo elemento, se puede utilizar el operador `$pull`, sin limitar la selección en la consulta.
+
+[source, console]
+----
+xime@cursada> db.materias.updateMany({}, { $pull: { docentes: 'Fury, Nick' }})
+----
+
+Esto modifica todos los documentos de la colección, eliminando al elemento indeseado.
+
+[source, console]
+----
+xime@cursada> db.materias.find({}, { _id: -1, nombre: 1, docentes: 1 })
+[
+  {
+    _id: 5,
+    nombre: 'Bases de Datos I',
+    docentes: [ 'Bertaccini, Daniel', 'Ebertz, Ximena', 'Rondelli, Hernán' ]
+  },
+  { _id: 6, nombre: 'Bases de Datos II', docentes: [] },
+  {
+    _id: 4,
+    nombre: 'Programación III',
+    docentes: [ 'Bertaccini, Daniel' ]
+  },
+  {
+    _id: 1,
+    nombre: 'Introducción a la Programación',
+    docentes: [ 'Ebertz, Ximena' ]
+  },
+  {
+    _id: 21,
+    nombre: 'Física Cuántica',
+    docentes: [ 'Rondelli, Hernán' ]
+  }
+]
+----
 
 
 == Update
