--- a/present/com-2/tex/fn-bcfn-ejemplo-1.tex
+++ b/present/com-2/tex/fn-bcfn-ejemplo-1.tex
@@ -21,8 +21,7 @@ sector, nro\_emp $\rightarrow$ nro\_legajo, cargo\\
 	34.567.890 & Call Center & 1 & Llamador \\
 	45.678.901 & Sistemas & 2 & Programador \\
 	12.345.678 & Call Center & 2 & Supervisor \\
-	32.654.987 & Call Center & 3 & Llamador \\
-	43.765.098 & Sistemas & 3 & Programador \\\hline
+	43.765.098 & Sistemas & 3 & Lider de Proyecto \\\hline
 \end{tabular}
 \end{center}
 
