--- a/present/com-2/tex/fn-bcfn-ejemplo-2.tex
+++ b/present/com-2/tex/fn-bcfn-ejemplo-2.tex
@@ -5,12 +5,12 @@
 \begin{document}
 
 \textbf{Esquema:}\\
-empleade(\underline{nro\_legajo}, sector, nro\_emp, cargo)\\
+empleade(\underline{nro\_legajo}, sector, nro\_emp, cargo) \textcolor{red}{$\Rightarrow$ !BCNF}\\
 
 \textbf{Dependencias funcionales:}\\
 nro\_legajo $\rightarrow$ sector, nro\_emp, cargo\\
 sector, nro\_emp $\rightarrow$ nro\_legajo, cargo\\
-{\color{red}{cargo $\rightarrow$ sector}}\\
+{\color{red}{cargo $\rightarrow$ sector}}
 
 \textbf{Instancia:}
 \begin{center}
@@ -21,18 +21,16 @@ sector, nro\_emp $\rightarrow$ nro\_legajo, cargo\\
 	34.567.890 & Call Center & 1 & Llamador \\
 	45.678.901 & Sistemas & 2 & Programador \\
 	12.345.678 & Call Center & 2 & Supervisor \\
-	32.654.987 & Call Center & 3 & Llamador \\
-	43.765.098 & Sistemas & 3 & Programador \\\hline
+	43.765.098 & Sistemas & 3 & Lider de Proyecto \\\hline
 \end{tabular}
-
 
 
 $\Big\Downarrow$
 \end{center}
 
 \textbf{Esquemas:}\\
-empleade(\underline{nro\_legajo}, nro\_emp, cargo)\\
-cargo(\underline{nombre}, sector)\\
+empleade(\underline{nro\_legajo}, nro\_emp, cargo) \textcolor{green}{$\Rightarrow$ BCNF}\\
+cargo(\underline{nombre}, sector) \textcolor{green}{$\Rightarrow$ BCNF}
 
 \textbf{Instancias:}
 \begin{center}
@@ -43,8 +41,7 @@ cargo(\underline{nombre}, sector)\\
 	34.567.890 & 1 & Llamador \\
 	45.678.901 & 2 & Programador \\
 	12.345.678 & 2 & Supervisor \\
-	32.654.987 & 3 & Llamador \\
-	43.765.098 & 3 & Programador \\\hline
+	43.765.098 & 3 & Lider de Proyecto \\\hline
 \end{tabular}
 \quad
 \begin{tabular}{| l | l |}\hline
