--- a/present/com-2/tex/ar-join-exercise.tex
+++ b/present/com-2/tex/ar-join-exercise.tex
@@ -9,7 +9,7 @@ Dadas las siguientes relaciones:
 \begin{center}
 artista (\underline{id}, nombre, comp\_disco)\\
 \vspace{.35cm}
-concierto (\underline{id\_artista}, \underline{estadio}, \underline{fecha})\\
+concierto (\underline{id\_artista, estadio, fecha})\\
 \vspace{0.5cm}
 \end{center}
 
